best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -29,7 +29,7 @@
 <ul>
 <li><a href="#org2585d5b">4.1. aspx 文件</a></li>
 <li><a href="#org3adc12e">4.2. Page 类</a></li>
-<li><a href="#org7b56e37">4.3. Page 生命周期</a></li>
+<li><a href="#orgcfd4161">4.3. Page 的生命周期</a></li>
 <li><a href="#org416e13d">4.4. Page 的内置对象</a></li>
 <li><a href="#org0651d6c">4.5. 数据控件</a>
 <ul>
@@ -389,11 +389,11 @@ Global.asax:
 </div>
 </div>
 
-<div id="outline-container-org7b56e37" class="outline-3">
-<h3 id="org7b56e37"><span class="section-number-3">4.3.</span> Page 生命周期</h3>
+<div id="outline-container-orgcfd4161" class="outline-3">
+<h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="orgcdc06fb">
+<figure id="orgf212c7e">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -584,7 +584,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org513475c">
+<pre class="example" id="org292b4ca">
 如果输入的内容长度小于5，下面用红色的字，提示:
 : 您输入的内容不合格，请重新再填！
 然后情况输入框，将光标 focus 到 input 框。
