best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -393,7 +393,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="orgf212c7e">
+<figure id="org9434c93">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -584,7 +584,11 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org292b4ca">
+<pre class="example" id="org6813626">
+----------------------    -------
+| .                  |    | 验证 |
+----------------------    -------
+
 如果输入的内容长度小于5，下面用红色的字，提示:
 : 您输入的内容不合格，请重新再填！
 然后情况输入框，将光标 focus 到 input 框。
