--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -393,7 +393,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="org2b21714">
+<figure id="org2e28f99">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -583,7 +583,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orge28bd08">
+<pre class="example" id="org446eef2">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -597,7 +597,7 @@ Code Action Task:
 然后，将输入框变成只读状态。
 </pre>
 
-<details><summary>答案</summary>
+<details><summary>答案</summary><br />
 
 <p>
 标注着 runat=server 的控件上的状态，
