--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -393,7 +393,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="org2e28f99">
+<figure id="orgb8b5d58">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -583,7 +583,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org446eef2">
+<pre class="example" id="orgcee33d4">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -635,6 +635,54 @@ Code Action Task:
 <span style="color: #000000;">}</span>
 </pre>
 </div>
+</details>
+
+<p>
+Code Action Task:
+</p>
+<pre class="example" id="org0a14b2b">
+在页面中，显示:
+: 这是本页面在 Page 生命中，被访问的第 N 次。
+
+这个例子用来理解如何使用 ViewState 对象。
+</pre>
+
+<details><summary>参考答案</summary><br />
+
+<p>
+第一种方案，借助 <code>asp:HiddenField</code> 控件，曲线救国。
+</p>
+<pre class="example">
+代码略。
+</pre>
+
+
+<p>
+第二种方案，使用 ViewState 对象:
+</p>
+<div class="org-src-container">
+<pre class="src src-html">&#36825;&#26159;&#26412;&#39029;&#38754;&#22312; Page &#29983;&#21629;&#20013;&#65292;&#34987;&#35775;&#38382;&#30340;&#31532; <span style="color: #000000;">&lt;</span>%= VisitCount %<span style="color: #000000;">&gt;</span> &#27425;&#12290;
+</pre>
+</div>
+<div class="org-src-container">
+<pre class="src src-csharp"><span style="color: #5317ac;">public</span> <span style="color: #005a5f;">int</span> <span style="color: #00538b;">VisitCount</span> <span style="color: #000000;">{</span>
+    <span style="color: #5317ac;">get</span>
+    <span style="color: #a8007f;">{</span>
+        <span style="color: #5317ac;">return</span> ViewState<span style="color: #005f88;">[</span><span style="color: #2544bb;">"vc"</span><span style="color: #005f88;">]</span> != <span style="color: #0000c0;">null</span> ? <span style="color: #005f88;">(</span><span style="color: #005a5f;">int</span><span style="color: #005f88;">)</span>ViewState<span style="color: #005f88;">[</span><span style="color: #2544bb;">"vc"</span><span style="color: #005f88;">]</span> : 0;
+    <span style="color: #a8007f;">}</span>
+    <span style="color: #5317ac;">set</span>
+    <span style="color: #a8007f;">{</span>
+        <span style="color: #005a5f;">ViewState</span><span style="color: #005f88;">[</span><span style="color: #2544bb;">"vc"</span><span style="color: #005f88;">]</span> = <span style="color: #0000c0;">value</span>;
+    <span style="color: #a8007f;">}</span>
+<span style="color: #000000;">}</span>
+
+<span style="color: #5317ac;">protected</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Page_Load</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span style="color: #000000;">{</span>
+    VisitCount += 1;
+<span style="color: #000000;">}</span>
+</pre>
+</div>
+
 </details>
 </div>
 </div>
