--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -393,7 +393,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="orgb8b5d58">
+<figure id="org541acb4">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -583,7 +583,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgcee33d4">
+<pre class="example" id="org7d4afae">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -635,12 +635,12 @@ Code Action Task:
 <span style="color: #000000;">}</span>
 </pre>
 </div>
-</details>
+</details><br/><br/>
 
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org0a14b2b">
+<pre class="example" id="orgf6f0432">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
