best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -393,7 +393,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="orga817713">
+<figure id="org30a62f6">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -583,7 +583,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgf6033ec">
+<pre class="example" id="org8a7f973">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -640,7 +640,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org277edb1">
+<pre class="example" id="orgdab6136">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -669,7 +669,7 @@ Code Action Task:
 </div>
 
 <p>
-第二种方案，使用 ViewState 对象:
+第二种方案，使用 ViewState 对象，即手动模式。
 </p>
 <div class="org-src-container">
 <pre class="src src-html"><span style="color: #000000;">&lt;</span><span style="color: #721045;">p</span><span style="color: #000000;">&gt;</span>
