--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-30 -->
+<!-- 2022-10-08 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ASP.NET</title>
@@ -38,6 +38,14 @@
 </ul>
 </li>
 <li><a href="#org9754857">4.6. 用户自定义控件</a></li>
+<li><a href="#org25e66f5">4.7. 其他</a>
+<ul>
+<li><a href="#orgd62b8c6">4.7.1. 路由 (Route)</a></li>
+<li><a href="#org3cc2ad1">4.7.2. 捆绑 (Bundle)</a></li>
+<li><a href="#orge307c3b">4.7.3. 网站 Logo (favicon.ico)</a></li>
+<li><a href="#orga4ecdb7">4.7.4. IHttpHandler.IsReusable</a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li><a href="#org1a00f89">5. ASP.NET MVC</a></li>
@@ -394,7 +402,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="org7843edd">
+<figure id="orgb5fb8de">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -584,7 +592,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org7a702a5">
+<pre class="example" id="org471ee57">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -641,7 +649,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org51aad6f">
+<pre class="example" id="orgc75e141">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -859,6 +867,78 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 </div>
 </div>
+
+<div id="outline-container-org25e66f5" class="outline-3">
+<h3 id="org25e66f5"><span class="section-number-3">4.7.</span> 其他</h3>
+<div class="outline-text-3" id="text-4-7">
+</div>
+<div id="outline-container-orgd62b8c6" class="outline-4">
+<h4 id="orgd62b8c6"><span class="section-number-4">4.7.1.</span> 路由 (Route)</h4>
+<div class="outline-text-4" id="text-4-7-1">
+<div class="org-src-container">
+<pre class="src src-csharp">RouteTable.Routes.<span style="color: #721045;">MapPageRoute</span><span style="color: #000000;">(</span><span style="color: #2544bb;">"hello"</span>, <span style="color: #2544bb;">"hello"</span>, <span style="color: #2544bb;">"~/Students1.aspx"</span><span style="color: #000000;">)</span>;
+RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span style="color: #000000;">(</span>
+    <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">FriendlyUrlSettings</span><span style="color: #a8007f;">()</span>
+    <span style="color: #a8007f;">{</span>
+        AutoRedirectMode = RedirectMode.Permanent
+    <span style="color: #a8007f;">}</span>
+<span style="color: #000000;">)</span>;
+</pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-org3cc2ad1" class="outline-4">
+<h4 id="org3cc2ad1"><span class="section-number-4">4.7.2.</span> 捆绑 (Bundle)</h4>
+<div class="outline-text-4" id="text-4-7-2">
+<pre class="example">
+让 css/js (1) 变少 (2) 变小
+</pre>
+
+
+<p>
+配置:
+</p>
+<div class="org-src-container">
+<pre class="src src-csharp">BundleTable.Bundles.<span style="color: #721045;">Add</span><span style="color: #000000;">(</span><span style="color: #5317ac;">new</span> <span style="color: #005a5f;">ScriptBundle</span><span style="color: #a8007f;">(</span><span style="color: #2544bb;">"~/bundles/MsAjaxJs"</span><span style="color: #a8007f;">)</span>.<span style="color: #721045;">Include</span><span style="color: #a8007f;">(</span>
+    <span style="color: #2544bb;">"~/Scripts/WebForms/MsAjax/MicrosoftAjax.js"</span>,
+    <span style="color: #2544bb;">"~/Scripts/WebForms/MsAjax/MicrosoftAjaxApplicationServices.js"</span>,
+    <span style="color: #2544bb;">"~/Scripts/WebForms/MsAjax/MicrosoftAjaxTimer.js"</span>,
+    <span style="color: #2544bb;">"~/Scripts/WebForms/MsAjax/MicrosoftAjaxWebForms.js"</span><span style="color: #a8007f;">)</span><span style="color: #000000;">)</span>;
+</pre>
+</div>
+
+<p>
+使用:
+</p>
+<div class="org-src-container">
+<pre class="src src-html"><span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">PlaceHolder</span> <span style="color: #00538b;">runat</span>=<span style="color: #2544bb;">"server"</span><span style="color: #000000;">&gt;</span>
+    <span style="color: #000000;">&lt;</span><span style="color: #00538b;">%:</span> Scripts.Render<span style="color: #a8007f;">(</span><span style="color: #2544bb;">"~/bundles/modernizr"</span><span style="color: #a8007f;">)</span> %<span style="color: #000000;">&gt;</span>
+<span style="color: #000000;">&lt;</span>/<span style="color: #8f0075;">asp</span>:<span style="color: #721045;">PlaceHolder</span><span style="color: #000000;">&gt;</span>
+<span style="color: #000000;">&lt;</span><span style="color: #8f0075;">webopt</span>:<span style="color: #721045;">bundlereference</span> <span style="color: #00538b;">runat</span>=<span style="color: #2544bb;">"server"</span> <span style="color: #00538b;">path</span>=<span style="color: #2544bb;">"~/Content/css"</span> /<span style="color: #000000;">&gt;</span>
+</pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-orge307c3b" class="outline-4">
+<h4 id="orge307c3b"><span class="section-number-4">4.7.3.</span> 网站 Logo (favicon.ico)</h4>
+<div class="outline-text-4" id="text-4-7-3">
+<p>
+放在网站的根目录。
+</p>
+</div>
+</div>
+
+<div id="outline-container-orga4ecdb7" class="outline-4">
+<h4 id="orga4ecdb7"><span class="section-number-4">4.7.4.</span> IHttpHandler.IsReusable</h4>
+<div class="outline-text-4" id="text-4-7-4">
+<p>
+重用。
+</p>
+</div>
+</div>
+</div>
 </section>
 
 <section id="outline-container-org1a00f89" class="outline-2">
@@ -877,7 +957,7 @@ MVC:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-09-30</p>
+<p class="date">Created: 2022-10-08</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
