--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-08 -->
+<!-- 2022-10-09 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -45,6 +45,18 @@
 <li>使用 Webform 方式，将学生管理系统 (CRUD) 完整复刻出来</li>
 <li>将官网的 WingtipToys 项目认真按步骤敲一遍 (或多遍)，做到理解+掌握</li>
 </ol>
+
+<p>
+国庆节后检查:
+</p>
+<ul class="org-ul">
+<li>第一题，15个人完成</li>
+<li>第二题，1个人完成</li>
+</ul>
+
+<p>
+后续又花费两天一起完成第一题。第二题，弃。
+</p>
 
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
@@ -149,7 +161,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-08</p>
+<p class="date">Created: 2022-10-09</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
