best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -58,6 +58,10 @@
 后续又花费两天一起完成第一题。第二题，弃。
 </p>
 
+<p>
+行动力有待加强，若干同学的学习意志有待提升。
+</p>
+
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
 <ul class="org-ul">
