best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-09 -->
+<!-- 2022-10-10 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -41,26 +41,14 @@
 <section id="toc">
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
-<ol class="org-ol">
-<li>使用 Webform 方式，将学生管理系统 (CRUD) 完整复刻出来</li>
-<li>将官网的 WingtipToys 项目认真按步骤敲一遍 (或多遍)，做到理解+掌握</li>
-</ol>
-
 <p>
-国庆节后检查:
+实现博客项目中[文章管理]相关的功能:
 </p>
 <ul class="org-ul">
-<li>第一题，15个人完成</li>
-<li>第二题，1个人完成</li>
+<li>包括文章的添加、查看、编辑、删除</li>
+<li>样式以及流程可以参考<a href="https://blog.csdn.net/qq_36130719?type=blog">一些博客网站</a></li>
+<li>项目名字命名格式: 姓名拼音.MyBlog (切!切!切!拼音要大写字母开始)</li>
 </ul>
-
-<p>
-后续又花费两天一起完成第一题。第二题，弃。
-</p>
-
-<p>
-行动力有待加强，若干同学的学习意志有待提升。
-</p>
 
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
@@ -165,7 +153,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-09</p>
+<p class="date">Created: 2022-10-10</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
