--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-09 -->
+<!-- 2022-10-10 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>任务和作业</title>
@@ -22,27 +22,41 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#active">1. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-29 Thu]</span></span></a></li>
-<li><a href="#org41741f5">2. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-21 Wed]</span></span></a></li>
-<li><a href="#org997e7e8">3. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-20 Tue]</span></span></a></li>
-<li><a href="#org187fc3d">4. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-16 Fri]</span></span></a></li>
-<li><a href="#org7abf163">5. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-14 Wed]</span></span></a></li>
-<li><a href="#orgc24a8e3">6. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-13 Tue]</span></span></a></li>
-<li><a href="#orgfc8155c">7. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-08 Thu]</span></span></a></li>
-<li><a href="#orgde31f9d">8. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-01 Thu]</span></span></a></li>
-<li><a href="#org129ccd7">9. <span class="timestamp-wrapper"><span class="timestamp">[2022-08-30 Tue]</span></span></a></li>
-<li><a href="#orgc6308d5">10. <span class="timestamp-wrapper"><span class="timestamp">[2022-08-29 Mon]</span></span></a></li>
-<li><a href="#org680c4b8">11. <span class="timestamp-wrapper"><span class="timestamp">[2022-07-05 Tue]</span></span></a></li>
-<li><a href="#orgc3bebf0">12. <span class="timestamp-wrapper"><span class="timestamp">[2022-07-04 Mon]</span></span></a></li>
+<li><a href="#active">1. <span class="timestamp-wrapper"><span class="timestamp">[2022-10-10 Mon]</span></span></a></li>
+<li><a href="#org3d30a97">2. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-29 Thu]</span></span></a></li>
+<li><a href="#org41741f5">3. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-21 Wed]</span></span></a></li>
+<li><a href="#org997e7e8">4. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-20 Tue]</span></span></a></li>
+<li><a href="#org187fc3d">5. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-16 Fri]</span></span></a></li>
+<li><a href="#org7abf163">6. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-14 Wed]</span></span></a></li>
+<li><a href="#orgc24a8e3">7. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-13 Tue]</span></span></a></li>
+<li><a href="#orgfc8155c">8. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-08 Thu]</span></span></a></li>
+<li><a href="#orgde31f9d">9. <span class="timestamp-wrapper"><span class="timestamp">[2022-09-01 Thu]</span></span></a></li>
+<li><a href="#org129ccd7">10. <span class="timestamp-wrapper"><span class="timestamp">[2022-08-30 Tue]</span></span></a></li>
+<li><a href="#orgc6308d5">11. <span class="timestamp-wrapper"><span class="timestamp">[2022-08-29 Mon]</span></span></a></li>
+<li><a href="#org680c4b8">12. <span class="timestamp-wrapper"><span class="timestamp">[2022-07-05 Tue]</span></span></a></li>
+<li><a href="#orgc3bebf0">13. <span class="timestamp-wrapper"><span class="timestamp">[2022-07-04 Mon]</span></span></a></li>
 </ul>
 </div>
 </nav>
 
 
-
 <section id="outline-container-active" class="outline-2">
-<h2 id="active"><span class="section-number-2">1.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-29 Thu]</span></span></h2>
+<h2 id="active"><span class="section-number-2">1.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-10 Mon]</span></span></h2>
 <div class="outline-text-2" id="text-active">
+<p>
+实现博客项目中[文章管理]相关的功能:
+</p>
+<ul class="org-ul">
+<li>包括文章的添加、查看、编辑、删除</li>
+<li>样式以及流程可以参考<a href="https://blog.csdn.net/qq_36130719?type=blog">一些博客网站</a></li>
+<li>项目名字命名格式: 姓名拼音.MyBlog (切!切!切!拼音要大写字母开始)</li>
+</ul>
+</div>
+</section>
+
+<section id="outline-container-org3d30a97" class="outline-2">
+<h2 id="org3d30a97"><span class="section-number-2">2.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-29 Thu]</span></span></h2>
+<div class="outline-text-2" id="text-2">
 <ol class="org-ol">
 <li>使用 Webform 方式，将学生管理系统 (CRUD) 完整复刻出来</li>
 <li>将官网的 WingtipToys 项目认真按步骤敲一遍 (或多遍)，做到理解+掌握</li>
@@ -67,8 +81,8 @@
 </section>
 
 <section id="outline-container-org41741f5" class="outline-2">
-<h2 id="org41741f5"><span class="section-number-2">2.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-21 Wed]</span></span></h2>
-<div class="outline-text-2" id="text-2">
+<h2 id="org41741f5"><span class="section-number-2">3.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-21 Wed]</span></span></h2>
+<div class="outline-text-2" id="text-3">
 <p>
 关于 HTTP 的无状态性:
 </p>
@@ -83,8 +97,8 @@
 </section>
 
 <section id="outline-container-org997e7e8" class="outline-2">
-<h2 id="org997e7e8"><span class="section-number-2">3.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-20 Tue]</span></span></h2>
-<div class="outline-text-2" id="text-3">
+<h2 id="org997e7e8"><span class="section-number-2">4.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-20 Tue]</span></span></h2>
+<div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>整理下 HttpRequest 对象的基本 API</li>
 <li>整理下 Asp.Net 的管线事件有哪些? 执行顺序?</li>
@@ -93,8 +107,8 @@
 </section>
 
 <section id="outline-container-org187fc3d" class="outline-2">
-<h2 id="org187fc3d"><span class="section-number-2">4.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-16 Fri]</span></span></h2>
-<div class="outline-text-2" id="text-4">
+<h2 id="org187fc3d"><span class="section-number-2">5.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-16 Fri]</span></span></h2>
+<div class="outline-text-2" id="text-5">
 <p>
 周末作业:
 </p>
@@ -116,8 +130,8 @@
 </section>
 
 <section id="outline-container-org7abf163" class="outline-2">
-<h2 id="org7abf163"><span class="section-number-2">5.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-14 Wed]</span></span></h2>
-<div class="outline-text-2" id="text-5">
+<h2 id="org7abf163"><span class="section-number-2">6.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-14 Wed]</span></span></h2>
+<div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>总结一下 SqlAdapter 的用法</li>
 <li>总结一下遍历 DataTable 的方法</li>
@@ -134,8 +148,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-orgc24a8e3" class="outline-2">
-<h2 id="orgc24a8e3"><span class="section-number-2">6.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-13 Tue]</span></span></h2>
-<div class="outline-text-2" id="text-6">
+<h2 id="orgc24a8e3"><span class="section-number-2">7.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-13 Tue]</span></span></h2>
+<div class="outline-text-2" id="text-7">
 <p>
 使用 ASP.NET 实现:
 </p>
@@ -163,8 +177,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-orgfc8155c" class="outline-2">
-<h2 id="orgfc8155c"><span class="section-number-2">7.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-08 Thu]</span></span></h2>
-<div class="outline-text-2" id="text-7">
+<h2 id="orgfc8155c"><span class="section-number-2">8.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-08 Thu]</span></span></h2>
+<div class="outline-text-2" id="text-8">
 <ul class="org-ul">
 <li>什么是 CS 架构，什么是 BS 架构?</li>
 <li>CS 架构跟 BS 架构相比，各有什么优劣?</li>
@@ -175,8 +189,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-orgde31f9d" class="outline-2">
-<h2 id="orgde31f9d"><span class="section-number-2">8.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-01 Thu]</span></span></h2>
-<div class="outline-text-2" id="text-8">
+<h2 id="orgde31f9d"><span class="section-number-2">9.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-09-01 Thu]</span></span></h2>
+<div class="outline-text-2" id="text-9">
 <p>
 修复【教学辅助系统】中存在的 BUG:
 </p>
@@ -188,8 +202,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-org129ccd7" class="outline-2">
-<h2 id="org129ccd7"><span class="section-number-2">9.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-08-30 Tue]</span></span></h2>
-<div class="outline-text-2" id="text-9">
+<h2 id="org129ccd7"><span class="section-number-2">10.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-08-30 Tue]</span></span></h2>
+<div class="outline-text-2" id="text-10">
 <p>
 将班级项目展的各个项目，通过QQ邮件的方式发送给我。8/30 日中午放学前务必提交。
 </p>
@@ -208,8 +222,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-orgc6308d5" class="outline-2">
-<h2 id="orgc6308d5"><span class="section-number-2">10.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-08-29 Mon]</span></span></h2>
-<div class="outline-text-2" id="text-10">
+<h2 id="orgc6308d5"><span class="section-number-2">11.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-08-29 Mon]</span></span></h2>
+<div class="outline-text-2" id="text-11">
 <p>
 实现一个计算器的程序。可以参考 Windows 自带的计算器。
 </p>
@@ -217,8 +231,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-org680c4b8" class="outline-2">
-<h2 id="org680c4b8"><span class="section-number-2">11.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-07-05 Tue]</span></span></h2>
-<div class="outline-text-2" id="text-11">
+<h2 id="org680c4b8"><span class="section-number-2">12.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-07-05 Tue]</span></span></h2>
+<div class="outline-text-2" id="text-12">
 <ol class="org-ol">
 <li>请做一下自我介绍 (至少 200 字)</li>
 <li>请描述一下你选择我们学习的原因</li>
@@ -233,8 +247,8 @@ https://xxx.com/yyy?name=xxx#kkkk
 </section>
 
 <section id="outline-container-orgc3bebf0" class="outline-2">
-<h2 id="orgc3bebf0"><span class="section-number-2">12.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-07-04 Mon]</span></span></h2>
-<div class="outline-text-2" id="text-12">
+<h2 id="orgc3bebf0"><span class="section-number-2">13.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-07-04 Mon]</span></span></h2>
+<div class="outline-text-2" id="text-13">
 <p>
 环境:
 </p>
@@ -248,7 +262,7 @@ https://xxx.com/yyy?name=xxx#kkkk
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-09</p>
+<p class="date">Created: 2022-10-10</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
