--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
 <p>
-实现博客项目中[文章管理]相关的功能:
+实现博客项目中 “文章管理” 相关的功能:
 </p>
 <ul class="org-ul">
 <li>包括文章的添加、查看、编辑、删除</li>
