best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -48,6 +48,7 @@
 <li>包括文章的添加、查看、编辑、删除</li>
 <li>样式以及流程可以参考<a href="https://blog.csdn.net/qq_36130719?type=blog">一些博客网站</a></li>
 <li>项目名字命名格式: 姓名拼音.MyBlog (切!切!切!拼音要大写字母开始)</li>
+<li>动手写代码之前，建议做好原型设计以及数据库设计</li>
 </ul>
 
 <div><br>
