--- a/html/index.html
+++ b/html/index.html
@@ -49,6 +49,14 @@
 <li>样式以及流程可以参考<a href="https://blog.csdn.net/qq_36130719?type=blog">一些博客网站</a></li>
 <li>项目名字命名格式: 姓名拼音.MyBlog (切!切!切!拼音要大写字母开始)</li>
 <li>动手写代码之前，建议做好原型设计以及数据库设计</li>
+<li>要求完成时间: 10.10 第一节、第二节、第三节</li>
+</ul>
+
+<p>
+小结:
+</p>
+<ul class="org-ul">
+<li>10.10 下午第一节，仅有两组上交</li>
 </ul>
 
 <div><br>
