best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-08 -->
+<!-- 2022-10-11 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ASP.NET</title>
@@ -402,7 +402,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="orgb5fb8de">
+<figure id="org29531de">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -592,7 +592,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org471ee57">
+<pre class="example" id="orgfa49765">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -649,7 +649,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgc75e141">
+<pre class="example" id="orgcd41d1c">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -944,20 +944,22 @@ RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span s
 <section id="outline-container-org1a00f89" class="outline-2">
 <h2 id="org1a00f89"><span class="section-number-2">5.</span> ASP.NET MVC</h2>
 <div class="outline-text-2" id="text-5">
-<p>
-MVC:
-</p>
+<ul class="org-ul">
+<li>基于 MVC 概念:
 <ul class="org-ul">
 <li>Model (模型)</li>
 <li>View  (视图)</li>
 <li>Controller (控制器)</li>
+</ul></li>
+<li>使用 Razor 作为页面的模板引擎</li>
+<li>约定大于配置 (CoC) 的理念</li>
 </ul>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-08</p>
+<p class="date">Created: 2022-10-11</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
