--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-10 -->
+<!-- 2022-10-11 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -41,22 +41,11 @@
 <section id="toc">
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
-<p>
-实现博客项目中 “文章管理” 相关的功能:
-</p>
 <ul class="org-ul">
-<li>包括文章的添加、查看、编辑、删除</li>
-<li>样式以及流程可以参考<a href="https://blog.csdn.net/qq_36130719?type=blog">一些博客网站</a></li>
-<li>项目名字命名格式: 姓名拼音.MyBlog (切!切!切!拼音要大写字母开始)</li>
-<li>动手写代码之前，建议做好原型设计以及数据库设计</li>
-<li>要求完成时间: 10月10日，第一节、第二节、第三节</li>
-</ul>
-
-<p>
-小结:
-</p>
-<ul class="org-ul">
-<li>10.10 下午第一节，仅有两组上交</li>
+<li>概念总结: MVC vs 三层架构</li>
+<li>了解什么是 CSRF 攻击</li>
+<li>熟悉 MVC 中 CRUD 的基本流程</li>
+<li>预习: MVC 的生命周期</li>
 </ul>
 
 <div><br>
@@ -162,7 +151,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-10</p>
+<p class="date">Created: 2022-10-11</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
