best_try_and_best_chance

--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -68,10 +68,18 @@
 </ul>
 
 <p>
-小结:
+10.10 下午第一节:
 </p>
 <ul class="org-ul">
-<li>10.10 下午第一节，仅有两组上交</li>
+<li>仅有两组上交</li>
+</ul>
+
+<p>
+10.11 下午第一节:
+</p>
+<ul class="org-ul">
+<li>未交: 郭松鹏、黎绍伟、郑钧洹、唐迪、刘少钦、卢传君、周晓乐、李晓辉、钟宇杨、梁恩宁、吴标 (请假) 共 11 人</li>
+<li>很多人，项目命名不规范&#x2026;..执行力严重不足</li>
 </ul>
 </div>
 </section>
