best_try_and_best_chance

--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -75,7 +75,7 @@
 </ul>
 
 <p>
-10.11 下午第一节:
+10.11 下午最后一节:
 </p>
 <ul class="org-ul">
 <li>未交: 郭松鹏、黎绍伟、郑钧洹、唐迪、刘少钦、卢传君、周晓乐、李晓辉、钟宇杨、梁恩宁、吴标 (请假) 共 11 人</li>
