best_try_and_best_chance

--- a/html/database/1-sqlserver.html
+++ b/html/database/1-sqlserver.html
@@ -37,7 +37,7 @@
 <ul class="org-ul">
 <li>SQLServer</li>
 <li>SQLServer Express (免费版本，对资源使用有很多限制)</li>
-<li>SQLServer LocalDB (本地数据库，没有多用户和网络连接功能)</li>
+<li>SQLServer Express LocalDB (本地数据库，没有多用户和网络连接功能)</li>
 </ul>
 
 <p>
